Change float to BigDecimal